cambios en la segunda sección

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-HTML   
  <title>Freelancer</title>
   </head>
   <body>
@@ -20,11 +19,29 @@ HTML
         </ul></div>
     </nav>
     <div class="daddy">
-        <img src="./assets/profile.png">
+    <img src="/assets/profile.png">
 
     <h1>START BOOTSTRAP</h1>
+    <hr>
+    <div class="line"></div>
+    <hr>
     <P>Web Developer - Graphic Artist - User Experience Designer</P>
 
 </div>
+
+<section>
+    <div class="section-cont">
+    <h2>PORTFOLIO</h2>
+    <p>⭐</p>
+    <div class="images">
+<img class="img2" src="/assets/cabin.png">
+<img class="img2" src="/assets/cake.png">
+<img class="img2" src="/assets/circus.png">
+<img class="img2" src="/assets/game.png">
+<img class="img2" src="/assets/safe.png">
+<img class="img2" src="/assets/submarine.png">
+
+    </div></div>
+</section>
   </body>
 </html>
