--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,11 @@
     <img src="/assets/profile.png">
 
     <h1>START BOOTSTRAP</h1>
-    <hr>
+ <div class="dad-line">
     <div class="line"></div>
-    <hr>
+    <p>⭐</p>
+    <div class="line"></div>
+</div>
     <P>Web Developer - Graphic Artist - User Experience Designer</P>
 
 </div>
